--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">aaa</string>
+    <string name="content_desc_cartoon_image">cartoon image</string>
 </resources>
